--- a/resources/scss/offers/offers.scss
+++ b/resources/scss/offers/offers.scss
@@ -22,6 +22,7 @@
         }
 
         .rooms__card {
+            width: 100%;
             margin-top: 1rem;
 
             @media (min-width: 1000px) {
