--- a/resources/scss/rooms/room-grid.scss
+++ b/resources/scss/rooms/room-grid.scss
@@ -12,6 +12,7 @@
         }
     
         .rooms__card {
+            width: 100%;
     
             @media (min-width:1000px){
                 width: 950px;
