--- a/resources/scss/rooms/room-list.scss
+++ b/resources/scss/rooms/room-list.scss
@@ -19,6 +19,7 @@
         }
     
         .rooms__card {
+            width: 100%;
     
             @media (min-width:1000px){
                 width: 950px;
